Bug 445907 - kwin_wayland crashes on start in KWin::DrmProperty::setPropertyLegacy
Summary: kwin_wayland crashes on start in KWin::DrmProperty::setPropertyLegacy
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: platform-drm (other bugs)
Version First Reported In: git master
Platform: Neon Linux
: NOR crash
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-11-22 07:31 UTC by Bharadwaj Raju
Modified: 2021-11-22 08:43 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Backtrace (15.76 KB, text/vnd.kde.kcrash-report)
2021-11-22 07:31 UTC, Bharadwaj Raju
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bharadwaj Raju 2021-11-22 07:31:58 UTC
Created attachment 143826 [details]
Backtrace

SUMMARY
Since recently updating to git master (Neon Unstable packages), kwin_wayland crashes in KWin::DrmProperty::setPropertyLegacy. Backtrace attached.

SOFTWARE/OS VERSIONS
KDE Plasma Version: 5.23.80
KDE Frameworks Version: 5.89.0
Qt Version: 5.15.3

KWin build version: git20211120.0332-0

HARDWARE
GPU: Mesa DRI Intel G41
Comment 1 Bug Janitor Service 2021-11-22 08:02:15 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/1697
Comment 2 Zamundaaa 2021-11-22 08:43:23 UTC
Git commit 50c39e202b4853b28fb6b2be8a7d78cc3835ad2a by Xaver Hugl.
Committed on 22/11/2021 at 08:00.
Pushed by zamundaaa into branch 'master'.

backends/drm: properly check for vrr property with legacy

M  +1    -1    src/backends/drm/drm_pipeline.cpp

https://invent.kde.org/plasma/kwin/commit/50c39e202b4853b28fb6b2be8a7d78cc3835ad2a