backends/drm: properly check for vrr property with legacy

BUG: 445907